tests/ivg/invalid/ellipse_sweep_ivg2.ivg
format IVG-2
ELLIPSE 0,0,10 sweep:0,90
